# swagger.json
@@ -1361,6 +1361,101 @@
                 }
             }
         },
+        "/api/cupones/listarcuponescliente": {
+            "get": {
+                "tags": [
+                    "cupon-controller"
+                ],
+                "operationId": "getCuponesAppUsingGET",
+                "summary": "Get cupon / cupones app",
+                "consumes": [
+                    "application/json"
+                ],
+                "description": "Fetch al cupon cupones basado en el parametro. \"20% de dscto\" para unos o \"all\" para traer todos los cupones.",
+                "parameters": [
+                    {
+                        "name": "query",
+                        "in": "query",
+                        "required": false,
+                        "type": "string",
+                        "description": "Sumilla o Descripcion"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "description": "Pagina solicitada"
+                    },
+                    {
+                        "name": "pageSize",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "description": "Tamaño de pagina solicitada"
+                    },
+                    {
+                        "name": "categoria",
+                        "in": "query",
+                        "required": false,
+                        "type": "string",
+                        "description": "Listado de Categorias"
+                    },
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "description": "Access Token JWT",
+                        "required": true,
+                        "type": "string",
+                        "default": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVC..."
+                    },
+                    {
+                        "name": "refresh-token",
+                        "in": "header",
+                        "description": "Refresh Token",
+                        "required": true,
+                        "type": "string",
+                        "default": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVC..."
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "schema": {
+                            "$ref": "#/definitions/Evento"
+                        },
+                        "description": "A JSON array of user information"
+                    },
+                    "400": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "statusCode": {
+                                    "type": "integer", "example": 400
+                                },
+                                "message": {
+                                    "type": "string", "example": "Invalid request body"
+                                }
+                            }
+                        },
+                        "description": "Bad Request"
+                    },
+                    "409": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "statusCode": {
+                                    "type": "integer", "example": 409
+                                },
+                                "message": {
+                                    "type": "string", "example": "Requested item wasn't found!"
+                                }
+                            }
+                        },
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
         "/api/eventos/asitenciaXGeneroAgrupEdad": {
             "get": {
                 "tags": [
@@ -2518,102 +2613,7 @@
                 }
             }
         },
-        "/api/cupones/listarcuponescliente?query={sumilladescrip}&page={page}&pageSize={pageSize}&categoria={categoria}": {
-            "get": {
-                "tags": [
-                    "cupon-controller"
-                ],
-                "operationId": "getCuponsClienteUsingGET",
-                "summary": "Get cuponCliente/ cuponesCliente",
-                "consumes": [
-                    "application/json"
-                ],
-                "description": "Fetch al Cupon basado en el parametro. Cliente \"20% de dscto\" para unos o \"all\" para traer todos los cupones para el Cliente.",
-                "parameters": [
-                    {
-                        "name": "categoria",
-                        "required": false,
-                        "in": "path",
-                        "type": "string",
-                        "description": "Ids de la categorias a buscar"
-                    },
-                    {
-                        "name": "sumilladescrip",
-                        "required": false,
-                        "in": "path",
-                        "type": "string",
-                        "description": "Sumilla o Descripción del cupon"
-                    },{
-                        "name": "page",
-                        "required": false,
-                        "in": "path",
-                        "type": "integer",
-                        "description": "Pagina solicitada"
-                    },{
-                        "name": "pageSize",
-                        "required": false,
-                        "in": "path",
-                        "type": "integer",
-                        "description": "Tamanio de pagina solicitada"
-                    },{
-                        "in": "header",
-                        "name": "authorization",
-                        "description": "Access Token JWT",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVC..."
-                        }
-                    },
-                    {
-                        "in": "header",
-                        "name": "refresh-token",
-                        "description": "Refresh Token",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVC..."
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "schema": {
-                            "$ref": "#/definitions/Cupon"
-                        },
-                        "description": "A JSON array of user information"
-                    },
-                    "400": {
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "statusCode": {
-                                    "type": "integer", "example": 400
-                                },
-                                "message": {
-                                    "type": "string", "example": "Invalid request body"
-                                }
-                            }
-                        },
-                        "description": "Bad Request"
-                    },
-                    "409": {
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "statusCode": {
-                                    "type": "integer", "example": 409
-                                },
-                                "message": {
-                                    "type": "string", "example": "Requested item wasn't found!"
-                                }
-                            }
-                        },
-                        "description": "Not Found"
-                    }
-                }
-            }
-        },
+
         "/api/cupones/deshabilitar": {
             "post": {
                 "tags": [
